# atlas

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  TYPING.md  build.rs  prelude.atc  temp.txt
.github/: main.workflow
.github/workflows/: rust.yml
.zed/: settings.json
atlas/: __main__.py  type.py
atlas-bin/: Cargo.toml
atlas-bin/src/: app.rs  env_info.rs  eval.rs  explorer.rs  input.rs  main.rs  prelude.atc  prompt.rs  session.rs  ui.rs
atlas-core/: Cargo.toml
atlas-core/example/: fs.at
atlas-core/examples/: _book_.hvm  app_lam.hvm  autodup_1.hvm  autodup_2.hvm  autodup_3.hvm  autodup_4.hvm  autodup_bound_vars.hvm  autodup_deep.hvm  autodup_dup_dyn.hvm  autodup_dup_dyn_3each.hvm  autodup_dup_dyn_both.hvm  autodup_dup_static.hvm  autodup_dup_static_3each.hvm  autodup_dup_static_both.hvm  autodup_let.hvm  autodup_many.hvm  autodup_mat_lam.hvm  autodup_mixed.hvm  autodup_nested_lam.hvm  autodup_nightmare.hvm  autodup_outer_ref.hvm  autodup_strict.hvm  autodup_sup_mix.hvm  autodup_value_path.hvm  bind_lam_fork.hvm  bind_shadow_dup_lam.hvm  bind_shadow_lam_dup.hvm  c2_not_t.hvm  c8_k8_not_t.hvm  cadd_c1_c1_not.hvm  cadd_c1_c4.hvm  cadd_c1_c4_not_t.hvm  cadd_c2_c1.hvm  cadd_c2_c2.hvm  cadd_c2_c4_not_t.hvm  cadd_c4_c1.hvm  cadd_c4_c1_not_t.hvm  cadd_c4_c2_not_t.hvm  cadd_c4_c4.hvm  cmul_c4_c2.hvm  (+174 more)
atlas-core/prelude/: prelude.at  prelude.atc
atlas-core/src/: grammar.lalrpop  hlir_grammar.lalrpop  il_grammar.lalrpop  lib.rs  net_grammar.lalrpop
atlas-core/src/allocator/: mem.rs  mod.rs  object.rs
atlas-core/src/compile/: mod.rs  op_graph.rs  test.rs
atlas-core/src/core/: ast.rs  expr.rs  mod.rs  parse.rs  prelude.rs  printer.rs
atlas-core/src/extension/: ext.rs  handle.rs  mod.rs  simple_io.rs  term.rs
atlas-core/src/hlir/: lexer.rs  mod.rs  transpile.rs
atlas-core/src/il/: lexer.rs  mod.rs  transpile.rs
atlas-core/src/parse/: ast.rs  lexer.rs  mod.rs  transpile.rs
atlas-core/src/store/: heap.rs  mod.rs  op.rs  print.rs  value.rs
atlas-core/src/util/: error.rs  graph.rs  memo_map.rs  mod.rs  mutex.rs  single_mutex.rs  slab.rs  u56.rs
atlas-core/src/vm/: allocator.rs  ast.rs  builtin.rs  builtins.rs  core.rs  engine.rs  exec.rs  heap.rs  machine.rs  memory.rs  mod.rs  parser.rs  printer.rs  resource.rs  scope.rs  syntax.rs  term.rs  test.rs  trace.rs  tracer.rs  universe.rs  value.rs
atlas-derive/: Cargo.toml
atlas-io/: Cargo.toml
atlas-io/src/: lib.rs
atlas-lang/: Cargo.toml
atlas-lang/examples/: foo.at
atlas-lang/src/: lexer.rs  lib.rs  lower.rs  parser.rs
atlas-lang/src/ast/: decl.rs  expr.rs  mod.rs  types.rs
atlas-parse/: Cargo.toml
atlas-parse/examples/: example.at  example.core
atlas-parse/src/: ast.rs  grammar.lalrpop  lexer.rs  lib.rs
atlas-parse/src/ast/: decl.rs  expr.rs  types.rs
atlas-sandbox/: Cargo.toml
atlas-sandbox/src/: atlasfs.rs  exec.rs  lib.rs  local.rs  main.rs  sandbox.rs  sandboxmanager.rs
atlas-sandbox/src/fs/: local.rs  mod.rs
atlas-sandbox/src/fuse/: dispatch.rs  manager.rs  mod.rs
atlas-wasm/: Cargo.toml
atlas-wasm/src/: lib.rs
core/: Cargo.toml
docs/: collapser.md  core.md  interaction_calculus.md  memory.md  primer.md  syntax.md
docs/core/: README.md  core.md  memory.md  syntax.md
docs/core/interactions/: alo_lam.md  alo_var.md  and_era.md  and_inc.md  and_num.md  app_mat_ctr.md  app_mat_num.md  app_mat_sup.md  app_nam.md  app_sup.md  ddu_num.md  dsu_inc.md  dsu_sup.md  dup_dry.md  dup_lam.md  dup_nam.md  dup_nod.md  eql_dry.md  eql_era.md  eql_lam.md  eql_mat.md  eql_nam.md  eql_sup.md  mat_inc.md  op2_era.md  op2_inc.md  op2_num_era.md  or_era.md  or_inc.md  or_num.md  or_sup.md  use_era.md
docs/interactions/: alo_cop.md  alo_dry.md  alo_dup.md  alo_nam.md  alo_nod.md  and_sup.md  app_ctr.md  app_dry.md  app_era.md  app_inc.md  app_lam.md  ddu_era.md  ddu_inc.md  ddu_sup.md  dsu_era.md  dsu_num.md  dup_sup.md  eql_any.md  eql_ctr.md  eql_inc.md  eql_num.md  eql_use.md  op2_num_num.md  op2_num_sup.md  op2_sup.md  uns.md  use_inc.md  use_sup.md  use_val.md
example/: annotated.at  bar.at  build.at  foo.at  mod.at  new.at  package.at  test.at
example/bytecode/: notes  notes_2
example/matches/: list.at  literal.at
hermes/: Cargo.toml
hermes-derive/: Cargo.toml
hermes-derive/src/: lib.rs
hermes/examples/: simple.rs
hermes/src/: lib.rs
kafig/: Cargo.toml
kafig-bin/: Cargo.toml
kafig-bin/src/: main.rs
kafig-container/: Cargo.toml
kafig-container/src/fuse/: manager.rs
kafig-core/: Cargo.toml
kafig-core/src/: fs.rs  lib.rs
kafig-core/src/fs/: local.rs  mod.rs
kafig-core/src/util/: async_iterator.rs  mod.rs
kafig-preload/: Cargo.toml
kafig-preload/src/: hooks.rs  lib.rs
kafig/src/: lib.rs  preload.rs
prelude/: ops.at  predule.at  prelude.at
samples/: bar.at  fs.at  test.at
samples/demo/: math.at
samples/matches/: variant.at
schema/: core.capnp  op.capnp  test.capnp  value.capnp
src/: ast.rs  error.rs  grammar.lalrpop  lexer.rs  lib.rs  parser.rs  slicer.rs
src/allocator/: object.rs
src/compile/: mod.rs  op_graph.rs  pack.rs  test.rs
src/core/: builtin.rs  cache.rs  free_vars.rs  io.rs  lang.rs  mod.rs  util.rs
src/interp/: compile.rs  machine.rs  mod.rs  node.rs  tim.rs  value.rs
src/optim/: compile.rs  graph.rs  mod.rs  pack.rs  test.rs  transpile.rs
src/parse/: ast.rs  lexer.rs  mod.rs  pretty.rs  slicer.rs  transpile.rs  typing.rs
src/store/: direct.rs  heap.rs  mem.rs  mod.rs  object.rs  op.rs  pretty.rs  print.rs  test.rs  value.rs
src/util/: error.rs  graph.rs  mod.rs
src/value/: allocator.rs  local.rs  mem.rs  mod.rs  op.rs  owned.rs  pretty.rs  storage.rs  test.rs
src/vm/: arena.rs  builtin.rs  compile.rs  machine.rs  mod.rs  op.rs  reg.rs  scope.rs  test.rs  tracer.rs  value.rs
src/vm_old/: compile.rs  machine.rs
