[package]
name = "atlas-bin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
atlas-lang = { path = "../atlas-lang" }
atlas-core = { path = "../atlas-core" }

clap = { version = "4.3.4", features = ["derive"] }
tokio = { version = "1", features = ["rt"] }

ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"

directories = "4.0.1"
