[package]
name = "atlas-core"
version = "0.1.0"
authors = ["Daniel Pfrommer <dan.pfrommer@gmail.com>"]
edition = "2021"

[build-dependencies]
lalrpop = "0.19"
test-log = "0.2"

[dependencies]
atlas-parse = { path = "../atlas-parse" }
lalrpop-util = "0.19"
logos = "0.12.1"
log = "0.4.13"
ordered-float = "2.0"