[package]
name = "atlas-core"
version = "0.1.0"
authors = ["Daniel Pfrommer <dan.pfrommer@gmail.com>"]
edition = "2024"

[build-dependencies]
test-log = "0.2"
ariadne = "0.6.0"

[dependencies]
atlas-parse = { path = "../atlas-parse" }
logos = "0.16.1"
log = "0.4.13"
ordered-float = "2.0"
hashbrown = "0.15.0"
uuid = { version = "1.11.0", features = ["v7"] }
sharded-slab = "0.1.7"
dashmap = "6.1.0"
serde = { version = "1.0.219", features = ["derive"] }
chumsky = { version = "0.12.0", features = ["pratt"] }

[dev-dependencies]
ariadne = "0.6.0"
