[package]
name = "atlas-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19"
test-log = "0.2"

[dependencies]
log = "0.4.13"
lalrpop-util = "0.19"
logos = "0.12.1"
codespan = "0.11"
ordered-float = "2.0"