[package]
name = "atlas-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atlas-core = { path = "../atlas-core" }
log = "0.4.13"
libmount = "0.1.15"
fuser = "0.11.0"
libc = "0.2"
async-trait = "0.1"
uuid = { version = "0.8", features = ["v4"] }
async-channel = "1.6"
blocking = "1.2"
async-process = "1.3"
unshare = "0.7"
futures-lite = "1.12"
users = "0.11"
smol = "1.2"