[package]
name = "atlas-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "1.9.0"
async-signals = "0.4.0"
async-trait = "0.1.71"
bitflags = "2.3.3"
clap = "4.3.12"
dashmap = "5.5.0"
env_logger = "0.10.0"
futures-lite = "1.13.0"
libc = "0.2.147"
log = "0.4.19"
positioned-io = "0.3.1"
smol = "1.3.0"
uuid = { version = "1.4.0", features = ["v4"] }

[dependencies.fuser]
version = "0.12.0"
default-features = false
features = ["abi-7-31"]
