[package]
name = "kafig-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.3.3"
log = "0.4.19"
positioned-io = "0.3.3"
ipc-channel = "0.18.0"
uuid = { version = "1.4.0", features = ["v4", "v5"] }
serde = "1.0.197"
async-trait = "0.1.79"
dyn-clone = "1.0.17"
tarpc = "0.34.0"

[dependencies.fuser]
version = "0.12.0"
default-features = false
features = ["abi-7-31"]
